모델링 svm 재시도

--- a/modeling/modeling.ipynb
+++ b/modeling/modeling.ipynb
@@ -211,19 +211,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'append'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 21\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m emotion, ratio \u001b[38;5;129;01min\u001b[39;00m desired_ratio\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m     20\u001b[0m     emotion_data \u001b[38;5;241m=\u001b[39m data[data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEmotion\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m emotion]\u001b[38;5;241m.\u001b[39msample(n\u001b[38;5;241m=\u001b[39mratio, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)  \u001b[38;5;66;03m# 적절한 비율로 샘플링\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m     selected_data \u001b[38;5;241m=\u001b[39m \u001b[43mselected_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(emotion_data)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# 선택된 데이터를 확인합니다.\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(selected_data)\n",
-      "File \u001b[1;32mc:\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\generic.py:6202\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6195\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m   6196\u001b[0m     name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_internal_names_set\n\u001b[0;32m   6197\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_metadata\n\u001b[0;32m   6198\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_accessors\n\u001b[0;32m   6199\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_info_axis\u001b[38;5;241m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   6200\u001b[0m ):\n\u001b[0;32m   6201\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[name]\n\u001b[1;32m-> 6202\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mobject\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getattribute__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'append'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Emotion                                           sentence  \\\n",
+      "0          불안            사소한 것도 잊어버리는데 노후준비를 어디서부터 시작해야 할지 모르겠어.   \n",
+      "1          불안                             부모님과의 진지한 대화시간을 가져야겠어.   \n",
+      "2          불안               자식이라고 있으면 뭐해. 제 엄마가 어떻게 사는지 관심도 없는데.   \n",
+      "3          불안                                  책을 보거나 핸드폰을 해야겠지.   \n",
+      "4          불안               평소 난폭한 아들이 병원비를 안 준다고 행패를 부릴까 봐 불안해.   \n",
+      "...       ...                                                ...   \n",
+      "29995      기쁨                  최근에 아이들에게 참 만족스러운 기분을 느끼는 일이 있었어.   \n",
+      "29996      기쁨                               남편에게 물어보는 게 좋을 것 같아.   \n",
+      "29997      기쁨  맞아. 반응을 살피려 아직 고려 중이란 얘기만 했었어. 한 번 모두를 모아 진지하게...   \n",
+      "29998      기쁨                    아니. 나는 아직 젊어서 이대로만 유지해도 될 것 같아.   \n",
+      "29999      기쁨                               나는 피아노 치는 거에 관심이 있어.   \n",
+      "\n",
+      "                                                   token  \n",
+      "0      ['사소한', '것', '도', '잊어버리는데', '노후', '준비', '를', '...  \n",
+      "1      ['부모님', '과의', '진지한', '대화', '시간', '을', '가져야겠어',...  \n",
+      "2      ['자식', '이라고', '있으면', '뭐', '해', '.', '제', '엄마',...  \n",
+      "3             ['책', '을', '보거나', '핸드폰', '을', '해야겠지', '.']  \n",
+      "4      ['평소', '난폭한', '아들', '이', '병원', '비', '를', '안', ...  \n",
+      "...                                                  ...  \n",
+      "29995  ['최근', '에', '아이', '들', '에게', '참', '만족스러운', '기분...  \n",
+      "29996    ['남편', '에게', '물어보는', '게', '좋을', '것', '같아', '.']  \n",
+      "29997  ['맞아', '.', '반응', '을', '살피려', '아직', '고려', '중',...  \n",
+      "29998  ['아니', '.', '나', '는', '아직', '젊어서', '이대', '로만',...  \n",
+      "29999  ['나', '는', '피아노', '치는', '거', '에', '관심', '이', '...  \n",
+      "\n",
+      "[30000 rows x 3 columns]\n"
      ]
     }
    ],
@@ -242,13 +263,14 @@
     "    '당황': 5000,\n",
     "    '기쁨': 5000\n",
     "}\n",
+    "\n",
     "# 선택한 데이터를 저장할 빈 데이터프레임을 생성합니다.\n",
     "selected_data = pd.DataFrame(columns=data.columns)\n",
     "\n",
     "# 각각의 감정에 대해 적절한 비율로 데이터를 선택합니다.\n",
     "for emotion, ratio in desired_ratio.items():\n",
     "    emotion_data = data[data['Emotion'] == emotion].sample(n=ratio, random_state=42)  # 적절한 비율로 샘플링\n",
-    "    selected_data = selected_data.append(emotion_data)\n",
+    "    selected_data = pd.concat([selected_data, emotion_data], ignore_index=True)  # 데이터프레임을 합칩니다.\n",
     "\n",
     "# 선택된 데이터를 확인합니다.\n",
     "print(selected_data)\n",
@@ -259,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -267,12 +289,12 @@
      "output_type": "stream",
      "text": [
       "Emotion\n",
-      "불안    26301\n",
-      "분노    26000\n",
-      "상처    25957\n",
-      "슬픔    25814\n",
-      "당황    24936\n",
-      "기쁨    16947\n",
+      "불안    5000\n",
+      "분노    5000\n",
+      "상처    5000\n",
+      "슬픔    5000\n",
+      "당황    5000\n",
+      "기쁨    5000\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -281,14 +303,14 @@
     "import pandas as pd\n",
     "\n",
     "# 데이터를 불러옵니다.\n",
-    "data = pd.read_csv('training_data-token.csv')\n",
+    "data = pd.read_csv('selected_data.csv')\n",
     "emotion_counts = data['Emotion'].value_counts()\n",
     "print(emotion_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +338,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.read_csv('selected_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
