--- a/modeling/modeling.ipynb
+++ b/modeling/modeling.ipynb
@@ -211,25 +211,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Emotion                                           sentence  \\\n",
-      "0          불안            사소한 것도 잊어버리는데 노후준비를 어디서부터 시작해야 할지 모르겠어.   \n",
-      "1          불안                             부모님과의 진지한 대화시간을 가져야겠어.   \n",
-      "2          불안               자식이라고 있으면 뭐해. 제 엄마가 어떻게 사는지 관심도 없는데.   \n",
-      "3          불안                                  책을 보거나 핸드폰을 해야겠지.   \n",
-      "4          불안               평소 난폭한 아들이 병원비를 안 준다고 행패를 부릴까 봐 불안해.   \n",
-      "...       ...                                                ...   \n",
-      "29995      기쁨                  최근에 아이들에게 참 만족스러운 기분을 느끼는 일이 있었어.   \n",
-      "29996      기쁨                               남편에게 물어보는 게 좋을 것 같아.   \n",
-      "29997      기쁨  맞아. 반응을 살피려 아직 고려 중이란 얘기만 했었어. 한 번 모두를 모아 진지하게...   \n",
-      "29998      기쁨                    아니. 나는 아직 젊어서 이대로만 유지해도 될 것 같아.   \n",
-      "29999      기쁨                               나는 피아노 치는 거에 관심이 있어.   \n",
+      "      Emotion                                     sentence  \\\n",
+      "0          불안      사소한 것도 잊어버리는데 노후준비를 어디서부터 시작해야 할지 모르겠어.   \n",
+      "1          불안                       부모님과의 진지한 대화시간을 가져야겠어.   \n",
+      "2          불안         자식이라고 있으면 뭐해. 제 엄마가 어떻게 사는지 관심도 없는데.   \n",
+      "3          불안                            책을 보거나 핸드폰을 해야겠지.   \n",
+      "4          불안         평소 난폭한 아들이 병원비를 안 준다고 행패를 부릴까 봐 불안해.   \n",
+      "...       ...                                          ...   \n",
+      "11995      기쁨                       내가 평상시에 관심 있던 공부를 할거야.   \n",
+      "11996      기쁨                            이제 내 건강에나 신경써야겠어.   \n",
+      "11997      기쁨          언제 비가 올지 모르니까 우산 하나는 사물함에 놓고 다녀야겠어.   \n",
+      "11998      기쁨     질병으로 죽을 때까지 고마운 마음으로 산다면 좋은 일이 생길지도 모른다.   \n",
+      "11999      기쁨  응. 친구한테 고마워서 밥을 사긴 했는데 아직 상대를 완벽하게 꼬시지 못했어.   \n",
       "\n",
       "                                                   token  \n",
       "0      ['사소한', '것', '도', '잊어버리는데', '노후', '준비', '를', '...  \n",
@@ -238,13 +238,13 @@
       "3             ['책', '을', '보거나', '핸드폰', '을', '해야겠지', '.']  \n",
       "4      ['평소', '난폭한', '아들', '이', '병원', '비', '를', '안', ...  \n",
       "...                                                  ...  \n",
-      "29995  ['최근', '에', '아이', '들', '에게', '참', '만족스러운', '기분...  \n",
-      "29996    ['남편', '에게', '물어보는', '게', '좋을', '것', '같아', '.']  \n",
-      "29997  ['맞아', '.', '반응', '을', '살피려', '아직', '고려', '중',...  \n",
-      "29998  ['아니', '.', '나', '는', '아직', '젊어서', '이대', '로만',...  \n",
-      "29999  ['나', '는', '피아노', '치는', '거', '에', '관심', '이', '...  \n",
+      "11995  ['내', '가', '평상시', '에', '관심', '있던', '공부', '를', ...  \n",
+      "11996         ['이제', '내', '건강', '에나', '신경', '써야겠어', '.']  \n",
+      "11997  ['언제', '비', '가', '올지', '모르니까', '우산', '하나', '는'...  \n",
+      "11998  ['질병', '으로', '죽', '을', '때', '까지', '고마운', '마음',...  \n",
+      "11999  ['응', '.', '친구', '한테', '고마워서', '밥', '을', '사긴',...  \n",
       "\n",
-      "[30000 rows x 3 columns]\n"
+      "[12000 rows x 3 columns]\n"
      ]
     }
    ],
@@ -256,12 +256,12 @@
     "\n",
     "# 각각의 감정에 대한 비율을 설정합니다.\n",
     "desired_ratio = {\n",
-    "    '불안': 5000,\n",
-    "    '분노': 5000,\n",
-    "    '상처': 5000,\n",
-    "    '슬픔': 5000,\n",
-    "    '당황': 5000,\n",
-    "    '기쁨': 5000\n",
+    "    '불안': 2000,\n",
+    "    '분노': 2000,\n",
+    "    '상처': 2000,\n",
+    "    '슬픔': 2000,\n",
+    "    '당황': 2000,\n",
+    "    '기쁨': 2000\n",
     "}\n",
     "\n",
     "# 선택한 데이터를 저장할 빈 데이터프레임을 생성합니다.\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -289,12 +289,12 @@
      "output_type": "stream",
      "text": [
       "Emotion\n",
-      "불안    5000\n",
-      "분노    5000\n",
-      "상처    5000\n",
-      "슬픔    5000\n",
-      "당황    5000\n",
-      "기쁨    5000\n",
+      "불안    2000\n",
+      "분노    2000\n",
+      "상처    2000\n",
+      "슬픔    2000\n",
+      "당황    2000\n",
+      "기쁨    2000\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,9 +347,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['svm_model.joblib']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.svm import SVC\n",
     "from joblib import load, dump\n",
