word2vec 저장 방법과 감정 분류해보는 코드 아직 미완 정확성이 매우 떨어짐

--- a/modeling/modeling.ipynb
+++ b/modeling/modeling.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,11 +181,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from gensim.models import Word2Vec\n",
+    "df_train = pd.read_csv(\"selected_data.csv\")\n",
     "model = Word2Vec(df_train['token'], vector_size=1000, window=5, min_count=1, workers=4, sg=1)"
    ]
   },
@@ -200,13 +201,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['word_model1.joblib']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import joblib\n",
     "\n",
-    "joblib.dump(model, 'word_model.joblib')"
+    "joblib.dump(model, 'word_model1.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"word2vec_model1.joblib\")"
    ]
   },
   {
@@ -386,6 +407,64 @@
    "source": [
     "svm_model = 1\n",
     "joblib.dump(svm_model, 'svm_model.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입력 문장: 소풍 갔더니 기분 좋아 내 친구도 같이 왔으면 더 좋았을텐데\n",
+      "예측된 감정: 기쁨\n"
+     ]
+    }
+   ],
+   "source": [
+    "from konlpy.tag import Okt\n",
+    "from gensim.models import Word2Vec\n",
+    "from sklearn.svm import SVC\n",
+    "from joblib import load\n",
+    "\n",
+    "# Okt 형태소 분석기 초기화\n",
+    "okt = Okt()\n",
+    "\n",
+    "# 형태소 분석 함수 정의\n",
+    "def tokenize(text):\n",
+    "    return okt.morphs(text)\n",
+    "\n",
+    "# 주어진 문장\n",
+    "sentence = \"소풍 갔더니 기분 좋아 내 친구도 같이 왔으면 더 좋았을텐데\"\n",
+    "\n",
+    "# 형태소로 분할\n",
+    "tokenized_sentence = tokenize(sentence)\n",
+    "\n",
+    "# Word2Vec 모델 불러오기\n",
+    "model = Word2Vec.load(\"word2vec_model1.joblib\")\n",
+    "\n",
+    "# 형태소를 Word2Vec 임베딩으로 변환하는 함수 정의\n",
+    "def get_embedding(model, tokens):\n",
+    "    embeddings = [model.wv[token] for token in tokens if token in model.wv.key_to_index]\n",
+    "    if embeddings:\n",
+    "        return sum(embeddings) / len(embeddings)\n",
+    "    else:\n",
+    "        return []\n",
+    "\n",
+    "# 문장을 Word2Vec 임베딩으로 변환\n",
+    "embedding = get_embedding(model, tokenized_sentence)\n",
+    "\n",
+    "# SVM 모델 불러오기\n",
+    "svm_model = SVC(kernel='linear')\n",
+    "svm_model = load(\"svm_model.joblib\")\n",
+    "\n",
+    "# 감정 분류\n",
+    "emotion = svm_model.predict([embedding])[0]\n",
+    "\n",
+    "print(\"입력 문장:\", sentence)\n",
+    "print(\"예측된 감정:\", emotion)"
    ]
   },
   {
