노래 반환 api 코드와 기본 테스트 웹구성

--- a/modeling/modeling.ipynb
+++ b/modeling/modeling.ipynb
@@ -437,7 +437,7 @@
     "    return okt.morphs(text)\n",
     "\n",
     "# 주어진 문장\n",
-    "sentence = \"소풍 갔더니 기분 좋아 내 친구도 같이 왔으면 더 좋았을텐데\"\n",
+    "sentence = \"\"\n",
     "\n",
     "# 형태소로 분할\n",
     "tokenized_sentence = tokenize(sentence)\n",
