메세지 삭제

--- a/modeling/modeling.ipynb
+++ b/modeling/modeling.ipynb
@@ -257,9 +257,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emotion\n",
+      "불안    2000\n",
+      "분노    2000\n",
+      "상처    2000\n",
+      "슬픔    2000\n",
+      "당황    2000\n",
+      "기쁨    2000\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
